--- a/index.html
+++ b/index.html
@@ -5,14 +5,46 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>HOME</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <div class="container">
+            <div class="navbar">
+                <ol>
+                    <li>
+                        <a href="#" class="navbar-link, navbar-link--active">HOME</a>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-link">ABOUT</a>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-link">WORKS</a>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-link">PROCESS</a>
+                    </li>
+                    <li>
+                        <a href="#" class="navbar-link">CONTACTS</a>
+                    </li>
+                </ol>
+            </div>
+            <div class="hero">
+                <h1 class="hero-title"> Design and Layout</h1>
+                <p>Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard dummy text for Latin scripts since the 16th century.</p>
+            </div>
+            <button class="">Write to me</button>
+        </div>
     </header>
 
+    <main>
 
+    </main>
 
     <footer>
         <p>
