--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="navbar">
                 <ol>
                     <li>
-                        <a href="#" class="navbar-link, navbar-link--active">HOME</a>
+                        <a href="#" class="navbar-link navbar-link--active">HOME</a>
                     </li>
                     <li>
                         <a href="#" class="navbar-link">ABOUT</a>
@@ -36,20 +36,36 @@
             </div>
             <div class="hero">
                 <h1 class="hero-title"> Design and Layout</h1>
-                <p>Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard dummy text for Latin scripts since the 16th century.</p>
+                <p class="hero-description">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard dummy text for Latin scripts since the 16th century.</p>
             </div>
-            <button class="">Write to me</button>
+            <button class="hero-button" href="#">Write to me</button>
         </div>
     </header>
 
     <main>
+        <section class="about section">
+            <div class="container-sm">
+                <h2 class=""></h2>
+            </div>
+        </section>
 
+        <section class="experience">
+        </section>
+
+        <section class="process section">
+        </section>
+
+        <section class="video">
+        </section>
     </main>
 
-    <footer>
-        <p>
-            &copy; 2019
-        </p>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-title">Ostap Ivanenko</div>
+            <div class="footer-description">
+                &copy; 2019. All rights reserved.
+            </div>
+        </div>
     </footer>
 </body>
 </html>
