--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,9 +33,9 @@
                 </ol>
             </div>
             <div class="hero">
-                <h1 class="hero-title"> Design and Layout</h1>
-                <p class="hero-description">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard text for Latin scripts since the 16th century.</p>
-                <a href="#" class="hero-button">write to me</a>
+                <h1 class="hero_title"> Design and Layout</h1>
+                <p class="hero_description">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard text for Latin scripts since the 16th century.</p>
+                <a href="#" class="hero_button">write to me</a>
             </div>
         </div>
     </header>
@@ -55,62 +53,62 @@
                 <h2 class="experience_title visually-hidden" >My experience</h2>
                 <div class="experience_container">
                 <div class="experience_item">
-                    <div class="experience_item-description">
-                        <p class="experience_item-number">40+</p>
-                        <p class="experience_item-label">projects</p>
+                    <div class="experience_item--description">
+                        <p class="experience_item--number">40+</p>
+                        <p class="experience_item--label">projects</p>
                     </div>
-                    <div class="experience_item-picture">
-                        <img class="experience_item-image" src="img/project.svg" alt="Experience 1">
-                    </div>
-                </div>
-
-                <div class="experience_item">
-                    <div class="experience_item-description">
-                        <p class="experience_item-number">40+</p>
-                        <p class="experience_item-label">projects</p>
-                    </div>
-                    <div class="experience_item-picture">
-                        <img class="experience_item-image" src="img/project.svg" alt="Experience 2">
+                    <div class="experience_item--picture">
+                        <img class="experience_item--image" src="img/project.svg" alt="Experience 1">
                     </div>
                 </div>
 
                 <div class="experience_item">
-                    <div class="experience_item-description">
-                        <p class="experience_item-number">40+</p>
-                        <p class="experience_item-label">projects</p>
+                    <div class="experience_item--description">
+                        <p class="experience_item--number">40+</p>
+                        <p class="experience_item--label">projects</p>
                     </div>
-                    <div class="experience_item-picture">
-                        <img class="experience_item-image" src="img/project.svg" alt="Experience 3">
-                    </div>
-                </div>
-
-                <div class="experience_item">
-                    <div class="experience_item-description">
-                        <p class="experience_item-number">40+</p>
-                        <p class="experience_item-label">projects</p>
-                    </div>
-                    <div class="experience_item-picture">
-                        <img class="experience_item-image" src="img/project.svg" alt="Experience 4">
+                    <div class="experience_item--picture">
+                        <img class="experience_item--image" src="img/project.svg" alt="Experience 2">
                     </div>
                 </div>
 
                 <div class="experience_item">
-                    <div class="experience_item-description">
-                        <p class="experience_item-number">40+</p>
-                        <p class="experience_item-label">projects</p>
+                    <div class="experience_item--description">
+                        <p class="experience_item--number">40+</p>
+                        <p class="experience_item--label">projects</p>
                     </div>
-                    <div class="experience_item-picture">
-                        <img class="experience_item-image" src="img/project.svg" alt="Experience 5">
+                    <div class="experience_item--picture">
+                        <img class="experience_item--image" src="img/project.svg" alt="Experience 3">
                     </div>
                 </div>
 
                 <div class="experience_item">
-                    <div class="experience_item-description">
-                        <p class="experience_item-number">40+</p>
-                        <p class="experience_item-label">projects</p>
+                    <div class="experience_item--description">
+                        <p class="experience_item--number">40+</p>
+                        <p class="experience_item--label">projects</p>
                     </div>
-                    <div class="experience_item-picture">
-                        <img class="experience_item-image" src="img/project.svg" alt="Experience 6">
+                    <div class="experience_item--picture">
+                        <img class="experience_item--image" src="img/project.svg" alt="Experience 4">
+                    </div>
+                </div>
+
+                <div class="experience_item">
+                    <div class="experience_item--description">
+                        <p class="experience_item--number">40+</p>
+                        <p class="experience_item--label">projects</p>
+                    </div>
+                    <div class="experience_item--picture">
+                        <img class="experience_item--image" src="img/project.svg" alt="Experience 5">
+                    </div>
+                </div>
+
+                <div class="experience_item">
+                    <div class="experience_item--description">
+                        <p class="experience_item--number">40+</p>
+                        <p class="experience_item--label">projects</p>
+                    </div>
+                    <div class="experience_item--picture">
+                        <img class="experience_item--image" src="img/project.svg" alt="Experience 6">
                     </div>
                 </div>
 
@@ -128,7 +126,7 @@
         <section class="video">
             <div class="container">
             <h2 class="video_title visually-hidden">Video</h2>
-                <iframe class="video_iframe" width="560" height="315" src="https://www.youtube.com/embed/g1-mYBJ2AuI?si=LAqhqk5epua-eOR8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe title="My working process" class="video_iframe" width="560" height="315" src="https://www.youtube.com/embed/g1-mYBJ2AuI?si=LAqhqk5epua-eOR8" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
@@ -137,7 +135,7 @@
         <div class="container">
             <div class="footer-title">Ostap Ivanenko</div>
             <div class="footer-description">
-                &copy; 2018. All rights reserved.
+                © 2018. All rights reserved.
             </div>
         </div>
     </footer>
