corrected code to follow BEM Methodology

--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="navbar">
-                <ol class="navbar_list">
-                    <li  class="navbar_item">
-                        <a href="#" class="navbar_link navbar_link--active">HOME</a>
+            <nav class="navbar">
+                <ol class="navbar__list">
+                    <li class="navbar__item">
+                        <a href="#" class="navbar__link navbar__link--active">HOME</a>
                     </li>
-                    <li class="navbar_item">
-                        <a href="#" class="navbar_link">ABOUT</a>
+                    <li class="navbar__item">
+                        <a href="#" class="navbar__link">ABOUT</a>
                     </li>
-                    <li class="navbar_item">
-                        <a href="#" class="navbar_link">WORKS</a>
+                    <li class="navbar__item">
+                        <a href="#" class="navbar__link">WORKS</a>
                     </li>
-                    <li  class="navbar_item">
-                        <a href="#" class="navbar_link">PROCESS</a>
+                    <li class="navbar__item">
+                        <a href="#" class="navbar__link">PROCESS</a>
                     </li>
-                    <li   class="navbar_item">
-                        <a href="#" class="navbar_link">CONTACTS</a>
+                    <li class="navbar__item">
+                        <a href="#" class="navbar__link">CONTACTS</a>
                     </li>
                 </ol>
-            </div>
+            </nav>
             <div class="hero">
-                <h1 class="hero_title"> Design and Layout</h1>
-                <p class="hero_description">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard text for Latin scripts since the 16th century.</p>
-                <a href="#" class="hero_button">write to me</a>
+                <h1 class="hero__title">Design and Layout</h1>
+                <p class="hero__description">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard text for Latin scripts since the 16th century.</p>
+                <a href="#" class="hero__button">write to me</a>
             </div>
         </div>
     </header>
@@ -43,98 +43,97 @@
     <main class="main">
         <section class="about section">
             <div class="container-sm">
-                <h2 class="about_title section-title">About me</h2>
-                <p class="about_description section-description">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard text for Latin scripts since the 16th century.</p>
+                <h2 class="about__title section__title">About me</h2>
+                <p class="about__description section__description">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard text for Latin scripts since the 16th century.</p>
             </div>
         </section>
 
         <section class="experience">
             <div class="container">
-                <h2 class="experience_title visually-hidden" >My experience</h2>
-                <div class="experience_container">
-                <div class="experience_item">
-                    <div class="experience_item--description">
-                        <p class="experience_item--number">40+</p>
-                        <p class="experience_item--label">projects</p>
+                <h2 class="experience__title visually-hidden">My experience</h2>
+                <div class="experience__container">
+                    <div class="experience__item">
+                        <div class="experience__description">
+                            <p class="experience__number">40+</p>
+                            <p class="experience__label">projects</p>
+                        </div>
+                        <div class="experience__picture">
+                            <img class="experience__image" src="img/project.svg" alt="Experience 1">
+                        </div>
                     </div>
-                    <div class="experience_item--picture">
-                        <img class="experience_item--image" src="img/project.svg" alt="Experience 1">
-                    </div>
-                </div>
 
-                <div class="experience_item">
-                    <div class="experience_item--description">
-                        <p class="experience_item--number">40+</p>
-                        <p class="experience_item--label">projects</p>
+                    <div class="experience__item">
+                        <div class="experience__description">
+                            <p class="experience__number">40+</p>
+                            <p class="experience__label">projects</p>
+                        </div>
+                        <div class="experience__picture">
+                            <img class="experience__image" src="img/project.svg" alt="Experience 2">
+                        </div>
                     </div>
-                    <div class="experience_item--picture">
-                        <img class="experience_item--image" src="img/project.svg" alt="Experience 2">
-                    </div>
-                </div>
 
-                <div class="experience_item">
-                    <div class="experience_item--description">
-                        <p class="experience_item--number">40+</p>
-                        <p class="experience_item--label">projects</p>
+                    <div class="experience__item">
+                        <div class="experience__description">
+                            <p class="experience__number">40+</p>
+                            <p class="experience__label">projects</p>
+                        </div>
+                        <div class="experience__picture">
+                            <img class="experience__image" src="img/project.svg" alt="Experience 3">
+                        </div>
                     </div>
-                    <div class="experience_item--picture">
-                        <img class="experience_item--image" src="img/project.svg" alt="Experience 3">
-                    </div>
-                </div>
 
-                <div class="experience_item">
-                    <div class="experience_item--description">
-                        <p class="experience_item--number">40+</p>
-                        <p class="experience_item--label">projects</p>
+                    <div class="experience__item">
+                        <div class="experience__description">
+                            <p class="experience__number">40+</p>
+                            <p class="experience__label">projects</p>
+                        </div>
+                        <div class="experience__picture">
+                            <img class="experience__image" src="img/project.svg" alt="Experience 4">
+                        </div>
                     </div>
-                    <div class="experience_item--picture">
-                        <img class="experience_item--image" src="img/project.svg" alt="Experience 4">
-                    </div>
-                </div>
 
-                <div class="experience_item">
-                    <div class="experience_item--description">
-                        <p class="experience_item--number">40+</p>
-                        <p class="experience_item--label">projects</p>
+                    <div class="experience__item">
+                        <div class="experience__description">
+                            <p class="experience__number">40+</p>
+                            <p class="experience__label">projects</p>
+                        </div>
+                        <div class="experience__picture">
+                            <img class="experience__image" src="img/project.svg" alt="Experience 5">
+                        </div>
                     </div>
-                    <div class="experience_item--picture">
-                        <img class="experience_item--image" src="img/project.svg" alt="Experience 5">
-                    </div>
-                </div>
 
-                <div class="experience_item">
-                    <div class="experience_item--description">
-                        <p class="experience_item--number">40+</p>
-                        <p class="experience_item--label">projects</p>
+                    <div class="experience__item">
+                        <div class="experience__description">
+                            <p class="experience__number">40+</p>
+                            <p class="experience__label">projects</p>
+                        </div>
+                        <div class="experience__picture">
+                            <img class="experience__image" src="img/project.svg" alt="Experience 6">
+                        </div>
                     </div>
-                    <div class="experience_item--picture">
-                        <img class="experience_item--image" src="img/project.svg" alt="Experience 6">
-                    </div>
-                </div>
-
                 </div>
             </div>
         </section>
 
         <section class="process section">
             <div class="container-sm">
-                <h2 class="process_title section-title">How I Work</h2>
-                <p class="process_description section-description">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard text for Latin scripts since the 16th century.</p>
+                <h2 class="process__title section__title">How I Work</h2>
+                <p class="process__description section__description">Lorem Ipsum is a placeholder text commonly used in printing and web design. Lorem Ipsum has been the standard text for Latin scripts since the 16th century.</p>
             </div>
         </section>
 
         <section class="video">
             <div class="container">
-            <h2 class="video_title visually-hidden">Video</h2>
-                <iframe title="My working process" class="video_iframe" width="560" height="315" src="https://www.youtube.com/embed/g1-mYBJ2AuI?si=LAqhqk5epua-eOR8" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h2 class="video__title visually-hidden">Video</h2>
+                <iframe title="My working process" class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/g1-mYBJ2AuI?si=LAqhqk5epua-eOR8" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-title">Ostap Ivanenko</div>
-            <div class="footer-description">
+            <div class="footer__title">Ostap Ivanenko</div>
+            <div class="footer__description">
                 © 2018. All rights reserved.
             </div>
         </div>
